--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"pages": ["pages/index/index", "pages/about/about"],
+	"pages": ["pages/index/index","pages/links/links", "pages/about/about"],
 	"window": {
 		"backgroundTextStyle": "light",
 		"navigationBarBackgroundColor": "#fff",
@@ -16,6 +16,12 @@
         "text":"主页",
         "iconPath":"image/bfdj.png",
         "selectedIconPath":"image/bfdj.png"
+      },
+      {
+        "pagePath": "pages/links/links",
+        "text":"羁绊",
+        "iconPath":"image/szj.png",
+        "selectedIconPath":"image/szj.png"
       },
       {
         "pagePath": "pages/about/about",
